force-app/main/default/objects/Length_of_Stay__c/Length_of_Stay__c.object-meta.xml
<CustomObject>
    <label>Civil Court Timeline</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Timeline #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Civil Court Timeline</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>