force-app/main/default/objects/Length_of_Stay__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case (will auto-fill upon save)</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Length_of_Stay</relationshipName>
    <type>Lookup</type>
</CustomField>