force-app/main/default/objects/Length_of_Stay__c/fields/Cost_of_Care_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Care_Disposition__c</fullName>
    <label>Civil Petition Details</label>
    <referenceTo>Cost_of_Care_Disposition__c</referenceTo>
    <relationshipLabel>Civil Court Timeline</relationshipLabel>
    <relationshipName>Length_of_Stay</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>