force-app/main/default/objects/Length_of_Stay__c/fields/Legal_Advocacy_Matter__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advocacy_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Advocacy Matter</label>
    <referenceTo>Legal_Advocacy_Matter__c</referenceTo>
    <relationshipName>Length_of_Stay</relationshipName>
    <type>Lookup</type>
</CustomField>