force-app/main/default/objects/Length_of_Stay__c/fields/Party_Involved__c.field-meta.xml
<CustomField>
    <fullName>Party_Involved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party Involved</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Length_of_Stay</relationshipName>
    <type>Lookup</type>
</CustomField>