force-app/main/default/objects/Length_of_Stay__c/fields/Scene_Location__c.field-meta.xml
<CustomField>
    <fullName>Scene_Location__c</fullName>
    <label>Scene Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scene One</fullName>
            </value>
            <value>
                <fullName>Scene Two</fullName>
            </value>
            <value>
                <fullName>Scene Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>